--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jpriggs/the101investor#readme",
   "dependencies": {
     "autoprefixer": "^9.4.7",
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cssnano": "^4.1.8",
     "debug": "^2.6.9",
@@ -31,7 +32,7 @@
     "mongoose": "^5.4.7",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
